2009-12-11  Andy Buckley  <andy@insectnation.org>

	* Removing use of PVertex from few remaining analyses. Still used
	by SVertex, which is itself hardly used and could maybe be
	removed...

2009-12-10  Andy Buckley  <andy@insectnation.org>

	* Updating JADE_OPAL to do the histo booking in init(), since
	sqrtS() is now available at that stage.

	* Renaming and slightly re-engineering all MC_*_* analyses to not
	be collider-specific (now the Analysis::sqrtS/beams()) methods
	mean that histograms can be dynamically binned.

	* Creating RivetUnvalidated.so plugin library for unvalidated
	analyses. Unvalidated analyses now need to be explicitly enabled
	with a --enable-unvalidated flag on the configure script.

	* Various min bias analyses updated and validated.

2009-12-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* propagate SPECIAL and HISTOGRAM sections from .plot files
	through compare-histos

	* STAR_2006_S6860818: <pT> vs particle mass, validate analysis

2009-12-04  Andy Buckley  <andy@insectnation.org>

	* Use scaling rather than normalising in DELPHI_1996: this is
	generally desirable, since normalizing to 1 for 1/sig dsig/dx
	observables isn't correct if any events fall outside the histo
	bounds.

	* Many fixes to OPAL_2004.

	* Improved Hemispheres interface to remove unnecessary consts on
	returned doubles, and to also return non-squared versions
	of (scaled) hemisphere masses.

	* Add "make pyclean" make target at the top level to make it
	easier for developers to clean their Python module build when the
	API is extended.

	* Identify use of unvalidated analyses with a warning message at
	runtime.

	* Providing Analysis::sqrtS() and Analysis::beams(), and making
	sure they're available by the time the init methods are called.

2009-12-02  Andy Buckley  <andy@insectnation.org>

	* Adding passing of first event sqrt(s) and beams to analysis handler.

	* Restructuring running to only use one HepMC input file (no-one